--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -7,7 +7,7 @@
     
     <template id="new_header_common_apps_latinchain_ai" inherit_id="web.layout">
         <xpath expr="//head//script[last()]" position="after">
-            <script src="/website_pinetwork_games_odoo/static/src/js/common-apps/common_apps_ai_functions.js?v=1.141"></script>
+            <script src="/website_pinetwork_games_odoo/static/src/js/common-apps/common_apps_ai_functions.js?v=1.142"></script>
         </xpath>
     </template>
     
@@ -947,7 +947,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.802"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.806"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -3191,6 +3191,29 @@
                       </div>
                     </div>
                     
+                    <div id="blockingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); z-index: 9999; justify-content: center; align-items: center;">
+                        <div style="display: flex; background-color: white; padding: 30px; border-radius: 10px; text-align: center; font-family: Arial, sans-serif; font-size: 24px; color: #333;">
+                            <div id="blocking-message" style="display: none;">
+                                <div>
+                                    Go to Pi Browser
+                                </div>
+                                <div>
+                                    <a class="anchor-click" style="color: blue !important;" href="#" target="_blank">Click here</a>
+                                </div>
+                            </div>
+                            <div id="paying-message" style="display: none;">
+                                <div>
+                                    <a class="anchor-click btn btn-link" style="color: blue !important;" href="#">Donate to unlock Apps</a>
+                                </div>
+                                <div>
+                                    <a id="test_app" class="btn btn-link" style="color: blue !important;" href="#">Or here to test this app</a>
+                                </div>
+                            </div>
+                            <div id="loading-message" style="display: block;">
+                                Loading...
+                            </div>
+                        </div>
+                    </div>
                     
                 </body>
             </html>
