--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3193,26 +3193,26 @@
                     
                     <div id="blockingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); z-index: 9999; justify-content: center; align-items: center;">
                         <div style="display: flex; flex-direction: column; background-color: white; padding: 30px; border-radius: 10px; text-align: center; font-family: Arial, sans-serif; font-size: 24px; color: #333;">
-                            <div id="blocking-message" style="display: none;">
-                                <div>
+                            <div id="blocking-message" style="display: none; margin-top: auto;">
+                                <div style="margin-top: auto;">
                                     Go to Pi Browser
                                 </div>
-                                <div>
+                                <div style="margin-top: auto;">
                                     <a class="anchor-click" style="color: blue !important;" href="#" target="_blank">Click here</a>
                                 </div>
                             </div>
-                            <div id="paying-message" style="display: none;">
-                                <div>
+                            <div id="paying-message" style="display: none; flex-direction: column; margin-top: auto;">
+                                <div style="margin-top: auto;">
                                     <a class="anchor-click btn btn-link" style="color: blue !important;" href="#">Donate to unlock Apps</a>
                                 </div>
-                                <div>
+                                <div style="margin-top: auto;">
                                     <a id="test_app" class="btn btn-link" style="color: blue !important;" href="#">Or here to test this app</a>
                                 </div>
-                                <div>
+                                <div style="margin-top: auto;">
                                     <a class="logout_latinchain btn btn-link" style="color: blue !important;" href="#">Logout</a>
                                 </div>
                             </div>
-                            <div id="loading-message" style="display: block;">
+                            <div id="loading-message" style="display: block; margin-top: auto;">
                                 Loading...
                             </div>
                         </div>
