--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3193,7 +3193,7 @@
                     
                     <div id="blockingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); z-index: 999999; justify-content: center; align-items: center;">
                         <div style="display: flex; flex-direction: column; background-color: white; padding: 30px; border-radius: 10px; text-align: center; font-family: Arial, sans-serif; font-size: 24px; color: #333;">
-                            <div id="blocking-message" style="display: none; margin-top: auto;">
+                            <div id="blocking-message" style="display: none; flex-direction: column; margin-top: auto;">
                                 <div style="margin-top: auto;">
                                     Go to Pi Browser
                                 </div>
