--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3202,19 +3202,22 @@
                                 </div>
                             </div>
                             <div id="paying-message" class="container" style="display: none; flex-direction: column; margin-top: auto;">
-                                <div style="margin-top: 5px;" class="row">
+                                <div style="margin-top: 10px;" class="row">
                                     <a class="anchor-click btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;" href="#">Pay to unlock</a>
                                 </div>
-                                <div style="margin-top: 5px;" class="row">
+                                <div style="margin-top: 10px;" class="row">
                                     <a id="test_app" class="btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;" href="#">Test this app</a>
                                 </div>
-                                <div class="PiBrowserLink row" style="margin-top: 5px;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
+                                <div style="margin-top: 10px;" class="row">
+                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;">Boost this app</a>
+                                </div>
+                                <div class="PiBrowserLink row" style="margin-top: 10px;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
                                     <a class="btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;" target="_blank" href="https://latinchain.pinet.com">Pi Browser</a>
                                 </div>
-                                <div class="PiBrowserLink row" style="margin-top: 5px;" t-else="">
+                                <div class="PiBrowserLink row" style="margin-top: 10px;" t-else="">
                                     <a class="btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;" target="_blank" href="https://latinchaintest9869.pinet.com">Pi Browser</a>
                                 </div>
-                                <div style="margin-top: 5px;" class="row">
+                                <div style="margin-top: 10px;" class="row">
                                     <a class="logout_latinchain btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;" href="#">Logout</a>
                                 </div>
                             </div>
