--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3202,7 +3202,7 @@
                                 </div>
                             </div>
                             <div id="paying-message" class="container" style="display: none; flex-direction: column; margin-top: auto;">
-                                <div style="margin-top: 10px;" class="row">
+                                <div style="" class="row">
                                     <a class="anchor-click btn btn-link rounded col-12" style="border: 2px solid black; color: black !important;" href="#">Pay To Unlock</a>
                                 </div>
                                 <div style="margin-top: 10px;" class="row">
