--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3191,7 +3191,7 @@
                       </div>
                     </div>
                     
-                    <div id="blockingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); z-index: 999999; justify-content: center; align-items: center;">
+                    <div id="blockingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); z-index: 999999 !important; justify-content: center; align-items: center;">
                         <div style="display: flex; flex-direction: column; top: 20px; position: fixed; background-color: white; padding: 30px; border-radius: 10px; text-align: center; font-family: Arial, sans-serif; font-size: 24px; color: #333; min-width: 250px; max-width: 90%">
                             <div id="blocking-message" style="display: none; flex-direction: column; margin-top: auto;">
                                 <div style="margin-top: 5px;">
