--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1241,10 +1241,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-6" style="text-align: right">
-                                    <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link rounded" style="border: 2px solid; color: black !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Pay Pi</a>
+                                    <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Pay Pi</a>
                                 </div>
                                 <div class="col-6" style="text-align: left">
-                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-link rounded" style="border: 2px solid; color: black !important;">Boost Rank</a>
+                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
                                 </div>
                             </div>
                         </div>
@@ -1256,10 +1256,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-6" style="text-align: right">
-                                    <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link rounded" style="border: 2px solid; color: black !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Pay Pi</a>
+                                    <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Pay Pi</a>
                                 </div>
                                 <div class="col-6" style="text-align: left">
-                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-link rounded" style="border: 2px solid; color: black !important;">Boost Rank</a>
+                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
                                 </div>
                             </div>
                         </div>
@@ -1273,10 +1273,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-6" style="text-align: right">
-                                    <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link rounded" style="border: 2px solid; color: black !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Pay Pi</a>
+                                    <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Pay Pi</a>
                                 </div>
                                 <div class="col-6" style="text-align: left">
-                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-link rounded" style="border: 2px solid; color: black !important;">Boost Rank</a>
+                                    <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
                                 </div>
                             </div>
                         </div>
